# PSgradientSDF

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  config.json  config_tumrgbd.json
config/: config_basket_LED.json  config_skorates.json  config_tumrgbd.json
cpp/: .gitignore  CMakeLists.txt
cpp/include/: ConfigLoader.h  Timer.h  mat.h
cpp/include/img_loader/: ImageLoader.h  MultiviewLoader.h  SynthLoader.h  TumrgbdLoader.h  img_loader.h
cpp/include/normals/: NormalEstimator.h
cpp/include/ps_optimizer/: Auxilary.h  LedOptimizer.cpp  LedOptimizer.h  LedOptimizerJa.cpp  Optimizer.cpp  Optimizer.h  OptimizerAux.cpp  OptimizerSettings.h  PsOptimizer.cpp  PsOptimizer.h  PsOptimizerJa.cpp  SharpDetector.h
cpp/include/sdf_tracker/: RigidOptimizer.h  RigidPointOptimizer.cpp  RigidPointOptimizer.h  RigidPointOptimizerOmp.cpp  Sdf.h  Sdfvoxel.h  TrackingSettings.h  VolumetricGradPixelSdf.cpp  VolumetricGradPixelSdf.h  VolumetricGradSdf.cpp  VolumetricGradSdf.h  VoxelGrid.cpp  VoxelGrid.h
cpp/third/mesh/: GradMarchingCubes.cpp  GradMarchingCubes.h  LayeredMarchingCubes.cpp  LayeredMarchingCubes.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesNoColor.cpp  MarchingCubesNoColor.h
cpp/voxel_ps/: CMakeLists.txt
cpp/voxel_ps/src/: config.json  main_ps.cpp
data/sokrates-mvs/: intrinsics.txt  pose.txt
